--- a/usl/package.json
+++ b/usl/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-cookie-law": "^1.13.3",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
