--- a/api/package.json
+++ b/api/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
+    "mongodb": "^4.5.0",
     "random-id": "^1.0.4"
   },
   "devDependencies": {
