--- a/api/package.json
+++ b/api/package.json
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "fs": "0.0.1-security",
     "http-proxy-middleware": "^1.0.4",
     "mongodb": "^4.5.0",
     "random-id": "^1.0.4"
